2004-03-11  Kim F. Storm  <storm@cua.dk>

	The following changes consolidates the identical/similar image
	support code previously found in xfns.c, w32fns.c, and macfns.c
	into a new file image.c.

	* makefile.w32-in (OBJ1): Add image.o.
	($(BLD)/image.$(O)): Add dependencies.

	* Makefile.in (XOBJ, MAC_OBJ): Add image.o.
	(image.o): Add dependencies.
	
	* image.c: New file with consolidated image support code.
	(COLOR_TABLE_SUPPORT): New define to control whether
	color table support is available (X only).
	(Bitmap_Record): Common name for x_bitmap_record,
	w32_bitmap_record, and mac_bitmap_record.
	(XImagePtr): Common name for pointer to XImage or equivalent.
	(XImagePtr_or_DC): New type to simplify code sharing; equivalent
	to XImagePtr on X+MAC, and to HDC on W32.
	(GET_PIXEL): Wrapper for XGetPixel or equivalent.
	(NO_PIXMAP): Common name for "None" or equivalent.
	(PNG_BG_COLOR_SHIFT): Bits to shift PNG background colors.
	(RGB_PIXEL_COLOR): Common type for an integer "pixel color" value.
	(PIX_MASK_RETAIN, PIX_MASK_DRAW): Portability macros (from macfns.c).
	(FRAME_X_VISUAL, x_defined_color, DefaultDepthOfScreen): Define
	with suitable equivalents on W32 and MAC for code sharing.
	(XDrawLine): Define on MAC for code sharing.
	(Destroy_Image, Free_Pixmap): Wrappers for code sharing.
	(IF_LIB_AVAILABLE): Macro to simplify code sharing.
	(Vx_bitmap_file_path, Vimage_cache_eviction_delay)
	(x_bitmap_height, x_bitmap_width, x_bitmap_pixmap)
	(x_reference_bitmap, x_create_bitmap_from_data)
	(x_create_bitmap_from_file, x_destroy_bitmap)
	(x_destroy_all_bitmaps, x_create_bitmap_mask)
	(XGetImage, XPutPixel, XGetPixel, XDestroyImage)
	(QCascent, QCmargin, QCrelief, QCconversion, QCcolor_symbols)
	(QCheuristic_mask, QCindex, QCmatrix, QCcolor_adjustment, QCmask)
	(Qlaplace, Qemboss, Qedge_detection, Qheuristic, Qcenter)
	(define_image_type, lookup_image_type, valid_image_p)
	(image_error, enum image_value_type, struct image_keyword)